--- a/lect31/my-react-app/src/App.css
+++ b/lect31/my-react-app/src/App.css
@@ -1,3 +1,25 @@
-h1{
-  background-color: red;
+#all{
+  /* background-color: chocolate; */
+  display: flex;
+  /* position: relative; */
+
+
+}
+#left{
+  width: 20vw;
+  background-color: gold;
+  height: 100vh;
+  position: fixed;
+}
+#center{
+  width: 60vw;
+  /* overflow: scroll; */
+  /* overflow-y: hidden; */
+}
+#right{
+  width:  20vw;
+  background-color: palevioletred;
+  height: 100vh;
+  position: fixed;
+  left: 1000px;
 }
